--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.4.5"
+    "vue": "^3.4.5",
+    "vue-router": "^4.0.13"
   },
   "devDependencies": {
     "@types/node": "^20.10.6",
