--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   },
   "dependencies": {
     "vue": "^3.4.5",
-    "vue-router": "^4.0.13"
+    "vue-router": "^4.0.13",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@types/node": "^20.10.6",
@@ -18,6 +19,7 @@
     "@vitejs/plugin-vue-jsx": "^3.1.0",
     "typescript": "^5.3.3",
     "vite": "^5.0.8",
-    "vue-tsc": "^1.8.25"
+    "vue-tsc": "^1.8.25",
+    "vuex-persistedstate": "^4.1.0"
   }
 }
