--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@vueuse/core": "^5.0.0",
+    "axios": "^1.2.0-alpha.1",
+    "qs": "^6.11.2",
     "vue": "^3.4.5",
     "vue-router": "^4.0.13",
     "vuex": "^4.0.2"
@@ -17,6 +20,8 @@
     "@types/node": "^20.10.6",
     "@vitejs/plugin-vue": "^4.5.2",
     "@vitejs/plugin-vue-jsx": "^3.1.0",
+    "ant-design-vue": "4.x",
+    "less": "^4.2.0",
     "typescript": "^5.3.3",
     "vite": "^5.0.8",
     "vue-tsc": "^1.8.25",
