--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
     "@vitejs/plugin-vue": "^4.5.2",
     "@vitejs/plugin-vue-jsx": "^3.1.0",
     "ant-design-vue": "4.x",
+    "autoprefixer": "^10.4.16",
     "less": "^4.2.0",
+    "postcss": "^8.4.33",
+    "tailwindcss": "^3.4.1",
     "typescript": "^5.3.3",
     "vite": "^5.0.8",
     "vue-tsc": "^1.8.25",
