--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@vueuse/core": "^5.0.0",
     "axios": "^1.2.0-alpha.1",
+    "pnpm": "^8.15.1",
     "qs": "^6.11.2",
     "vue": "^3.4.5",
     "vue-router": "^4.0.13",
@@ -27,6 +28,7 @@
     "tailwindcss": "^3.4.1",
     "typescript": "^5.3.3",
     "vite": "^5.0.8",
+    "vite-plugin-svg-icons": "^2.0.1",
     "vue-tsc": "^1.8.25",
     "vuex-persistedstate": "^4.1.0"
   }
