--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "name": "vue3-vite-ts-template",
   "private": true,
-  "version": "0.0.0",
+  "version": "2.0.0",
   "type": "module",
+  "author": "Changjun",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --mode development",
+    "build-fix": "vue-tsc && vite build --mode development-fix",
     "build": "vue-tsc && vite build",
     "preview": "vite preview"
   },
@@ -24,6 +26,7 @@
     "autoprefixer": "^10.4.16",
     "less": "^4.2.0",
     "postcss": "^8.4.33",
+    "rollup-plugin-visualizer": "^5.12.0",
     "tailwindcss": "^3.4.1",
     "ts-md5": "^1.3.1",
     "typescript": "^5.3.3",
